--- a/.github/workflows/trigger_tf_wf.yml
+++ b/.github/workflows/trigger_tf_wf.yml
@@ -11,10 +11,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Get changed files
+        id: files
+        uses: tj-actions/changed-files@v41
+
       - name: Send repository_dispatch event
         uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
           repository: sasidaren-coder/github-actions-test
           event-type: config-updated
-          client-payload: '{"source":"github-config-repo","changed":"configs/"}'
+          client-payload: |
+            {
+              "source":"github-config-repo",
+              "changed_files": ${{ toJson(steps.files.outputs.all_changed_files) }}
+            }
