--- a/.github/workflows/trigger_tf_wf.yml
+++ b/.github/workflows/trigger_tf_wf.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v4
+
       - name: Get changed files
         id: files
         uses: tj-actions/changed-files@v41
