--- a/.github/workflows/trigger_tf_wf.yml
+++ b/.github/workflows/trigger_tf_wf.yml
@@ -27,5 +27,6 @@ jobs:
           client-payload: |
             {
               "source":"github-config-repo",
+              "clients": "client1",
               "changed_files": [${{ toJson(steps.files.outputs.all_changed_files) }}]
             }
