--- a/.github/workflows/trigger_tf_wf.yml
+++ b/.github/workflows/trigger_tf_wf.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
           repository: sasidaren-coder/github-actions-test
-          event-type: config-updated
+          event-type: config-updated1
           client-payload: |
             {
               "source":"github-config-repo",
