--- a/.github/workflows/cd-trigger.yaml
+++ b/.github/workflows/cd-trigger.yaml
@@ -1,17 +1,17 @@
-on:
-  pull_request_review:
-    types: [submitted]
-    if: github.event.review.state == 'approved'
+# on:
+#   pull_request_review:
+#     types: [submitted]
+#     if: github.event.review.state == 'approved'
 
-  push:
-    branches:
-      - main
-    tags:
-      - '*'
+#   push:
+#     branches:
+#       - main
+#     tags:
+#       - '*'
 
-jobs:
-  call-apply:
-    uses: sasidaren-coder/github-actions-test/.github/workflows/cd-workflow.yml@main
-    with:
-      tf_action: "apply"
-      config_path: "client1/azure/dev"
+# jobs:
+#   call-apply:
+#     uses: sasidaren-coder/github-actions-test/.github/workflows/cd-workflow.yml@main
+#     with:
+#       tf_action: "apply"
+#       config_path: "client1/azure/dev"
