fgile name change

--- a/.github/workflows/ci-trigger.yaml
+++ b/.github/workflows/ci-trigger.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   call-plan:
-    uses: sasidaren-coder/github-actions-test/.github/workflows/ci-workflow.yml@main
+    uses: sasidaren-coder/github-actions-test/.github/workflows/ci-workflow.yaml@main
     with:
       tf_action: "plan"
       config_path: "client1/azure/dev"
