--- a/.github/workflows/ci-trigger.yaml
+++ b/.github/workflows/ci-trigger.yaml
@@ -33,7 +33,12 @@ jobs:
           echo "Changed files:"
           git fetch origin ${{ github.base_ref }}
           FILE_PATH=$(git diff --name-only origin/${{ github.base_ref }} | grep 'resources.yaml' | head -n 1)
+          if [[ -z "$FILE_PATH" ]]; then
+            echo "No resources.yaml file was changed."
+            exit 1
+          fi
           CONFIG_PATH=$(dirname "$FILE_PATH")
+          echo "Path of the file that has been changed: $(CONFIG_PATH)"
           echo "config_path=$CONFIG_PATH" >> $GITHUB_OUTPUT
 
   call-ci-workflow:
