--- a/.github/workflows/ci-trigger.yaml
+++ b/.github/workflows/ci-trigger.yaml
@@ -22,7 +22,7 @@ jobs:
   detect-changed-paths:
     runs-on: ubuntu-latest
     outputs:
-      config_path: ${{ steps.setmatrix.outputs.config_path }}
+      matrix: ${{ steps.setmatrix.outputs.matrix }}
     steps:
       - name: Checkout config-repo
         uses: actions/checkout@v3
