--- a/.github/workflows/cd-trigger-tag.yaml
+++ b/.github/workflows/cd-trigger-tag.yaml
@@ -5,7 +5,8 @@ on:
     tags:
       - 'test-*'
       - 'prod-*'
-      - 'client*-*-(test|prod)-*'
+      - 'client*-*-test-*'
+      - 'client*-*-prod-*'
 
 jobs:
   extract-config-path:
