--- a/client1/azure/test/resources.yaml
+++ b/client1/azure/test/resources.yaml
@@ -1,10 +1,10 @@
 ---
 topics:
-- topic_name: tp14
+- topic_name: "tp4-az"
   partitions_count: 1
   config:
     cleanup.policy: delete
     retention.ms: '604800000'
 serviceaccounts:
-- name: svc14
+- name: svc4-az
   description: test service account1
