--- a/.github/workflows/cd-trigger-push.yaml
+++ b/.github/workflows/cd-trigger-push.yaml
@@ -39,8 +39,9 @@ jobs:
     strategy:
       matrix:
         config_paths: ${{ fromJson(needs.detect-dev-paths.outputs.matrix).config_paths }}
-    uses: sasidaren-coder/github-actions-test/.github/workflows/cd-workflow.yaml@main
+    uses: sasidaren-coder/github-actions-test/.github/workflows/cd-workflow.yaml@release1
     with:
       tf_action: "apply"
       config_path: ${{ matrix.config_paths }}
+      iac_release_tag: "release1"
     secrets: inherit
