--- a/.github/workflows/cd-trigger-push.yaml
+++ b/.github/workflows/cd-trigger-push.yaml
@@ -39,9 +39,9 @@ jobs:
     strategy:
       matrix:
         config_paths: ${{ fromJson(needs.detect-dev-paths.outputs.matrix).config_paths }}
-    uses: sasidaren-coder/github-actions-test/.github/workflows/cd-workflow.yaml@release1
+    uses: sasidaren-coder/github-actions-test/.github/workflows/cd-workflow.yaml@${{ vars.IAC_TAG }}
     with:
       tf_action: "apply"
       config_path: ${{ matrix.config_paths }}
-      iac_release_tag: "release1"
+      iac_release_tag: ${{ vars.IAC_TAG }}
     secrets: inherit
