--- a/.github/workflows/cd-trigger-tag.yaml
+++ b/.github/workflows/cd-trigger-tag.yaml
@@ -33,9 +33,9 @@ jobs:
 
   deploy-tagged:
     needs: extract-config-path
-    uses: sasidaren-coder/github-actions-test/.github/workflows/cd-workflow.yaml@release1
+    uses: sasidaren-coder/github-actions-test/.github/workflows/cd-workflow.yaml@${{ vars.IAC_TAG }}
     with:
       tf_action: "apply"
       config_path: ${{ needs.extract-config-path.outputs.config_path }}
-      iac_release_tag: "release1"
+      iac_release_tag: ${{ vars.IAC_TAG }}
     secrets: inherit
