--- a/.github/workflows/ci-trigger.yaml
+++ b/.github/workflows/ci-trigger.yaml
@@ -56,9 +56,9 @@ jobs:
     strategy:
       matrix:
         config_paths: ${{ fromJson(needs.detect-changed-paths.outputs.matrix).config_paths }}
-    uses: sasidaren-coder/github-actions-test/.github/workflows/ci-workflow.yaml@release1
+    uses: sasidaren-coder/github-actions-test/.github/workflows/ci-workflow.yaml@${{ vars.IAC_TAG }}
     with:
       tf_action: "plan"
       config_path: ${{ matrix.config_paths }}
-      iac_release_tag: "release1"
+      iac_release_tag: ${{ vars.IAC_TAG }}
     secrets: inherit
