workflow trigger changes

--- a/.github/workflows/cd-trigger-tag.yaml
+++ b/.github/workflows/cd-trigger-tag.yaml
@@ -33,7 +33,7 @@ jobs:
 
   deploy-tagged:
     needs: extract-config-path
-    uses: sasidaren-coder/github-actions-test/.github/workflows/cd-workflow.yaml@${{ vars.IAC_TAG }}
+    uses: sasidaren-coder/github-actions-test/.github/workflows/cd-workflow.yaml@release1
     with:
       tf_action: "apply"
       config_path: ${{ needs.extract-config-path.outputs.config_path }}
