--- a/.github/workflows/ci-trigger.yaml
+++ b/.github/workflows/ci-trigger.yaml
@@ -60,5 +60,5 @@ jobs:
     with:
       tf_action: "plan"
       config_path: ${{ matrix.config_paths }}
-      iac_release_tag: ${{ vars.IAC_TAG }}
+      iac_release_tag: "release1"
     secrets: inherit
