--- a/.github/workflows/cd-trigger-tag.yaml
+++ b/.github/workflows/cd-trigger-tag.yaml
@@ -37,5 +37,5 @@ jobs:
     with:
       tf_action: "apply"
       config_path: ${{ needs.extract-config-path.outputs.config_path }}
-      iac_release_tag: ${{ vars.IAC_TAG }}
+      iac_release_tag: "release1"
     secrets: inherit
